argocd/infra/longhorn/longhorn-ui-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui-internal-route
  namespace: longhorn-system
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["longhorn.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service
        name: longhorn-frontend
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
